--- a/my_mind.html
+++ b/my_mind.html
@@ -324,7 +324,7 @@
                 <!--<li>4 lab experiment wrote in the record</li>-->
             </ul>
             </li>
-            <li><b>Probability and Statistics</b>
+            <li><b>Probability and Statistic</b>
             <ul class="points-list-sub" type="square">
                 <!--<li>4 lab experiment wrote in the record</li>-->
             </ul>
