--- a/my_mind.html
+++ b/my_mind.html
@@ -88,7 +88,7 @@
         }
         /* WORK DONE SECTION */
         .work-done-section {
-            background: #0f3460;
+            background: #f8f8f8;
             padding: 20px;
             border-left: 5px solid #48dbfb;
             border-radius: 5px;
