data base exam on tuesday

--- a/my_mind.html
+++ b/my_mind.html
@@ -191,7 +191,7 @@
                 <td class="subject-name">Database Systems</td>
                 <td><span class="status-done">COMPLETED</span></td>
                 <td><span class="status-done">COMPLETED</span></td>
-                <td></td>
+                <td><span class="status-Pending">Tuesday</span> <br><small class="status-pending">30th</td>
                 <td></td>
                 <td></td>
                 <td></td>
