--- a/my_mind.html
+++ b/my_mind.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>1st SEM MCA Tracker</title>
+    <link rel="icon" href="https://cdn-icons-png.flaticon.com/512/201/201614.png" type="image/x-icon">
     <style>
         /* Modern Reset & Font */
         * { font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif; box-sizing: border-box; }
