Data structure seminor completed

--- a/my_mind.html
+++ b/my_mind.html
@@ -186,7 +186,7 @@
                 <td></td>
                 <td></td>
                 <td></td>
-                <td><small class="status-pending">Tomorrow</small></td>
+                <td><small class="status-done">COMPLETED</small></td>
             </tr>
             <tr>
                 <td class="subject-name">Database Systems</td>
