Data structure ca2 completed

--- a/my_mind.html
+++ b/my_mind.html
@@ -181,7 +181,7 @@
                 <td class="subject-name">Data Structures and Algorithms</td>
                 <td><span class="status-done">COMPLETED</span></td>
                 <td><span class="status-done">COMPLETED</span></td>
-                <td><span class="status-upcoming">Monday</span><br><small class="status-pending">1.25-2.20</small></td>
+                <td><span class="status-done">COMPLETED l</span><br><small class="status-pending">1.25-2.20</small></td>
                 <td></td>
                 <td></td>
                 <td></td>
