--- a/my_mind.html
+++ b/my_mind.html
@@ -192,7 +192,7 @@
                 <td class="subject-name">Database Systems</td>
                 <td><span class="status-done">COMPLETED</span></td>
                 <td><span class="status-done">COMPLETED</span></td>
-                <td><span class="status-done>completed </span></td>
+                <td><span class="status-done">completed </span></td>
                 <td></td>
                 <td></td>
                 <td></td>
