all ca2 exams done

--- a/my_mind.html
+++ b/my_mind.html
@@ -192,7 +192,7 @@
                 <td class="subject-name">Database Systems</td>
                 <td><span class="status-done">COMPLETED</span></td>
                 <td><span class="status-done">COMPLETED</span></td>
-                <td><span class="status-done">completed </span></td>
+                <td><span class="status-done">COMPLETED</span></td>
                 <td></td>
                 <td></td>
                 <td></td>
@@ -203,7 +203,7 @@
                 <td class="subject-name">Computer Networks and Security</td>
                 <td><span class="status-done">COMPLETED</span></td>
                 <td><span class="status-done">COMPLETED</span></td>
-                <td><span class="status-Pending">Wednesday</span> <br><small class="status-pending">8.50-9.45</small></td></td>
+                <td><span class="status-done">COMPLETED</span></td>
                 <td></td>
                 <td></td>
                 <td></td>
@@ -236,7 +236,7 @@
                 <td class="subject-name">Web Technology</td>
                 <td><span class="status-done">COMPLETED</span></td>
                 <td><span class="status-done">COMPLETED</span></td>
-                <td><span class="status-upcoming">Wednesday</span><small class="status-pending">8.50-10.30</small></td>
+                <td><span class="status-done">COMPLETED</span></td>
                 <td></td>
                 <td></td>
                 <td></td>
@@ -247,7 +247,7 @@
                 <td class="subject-name">Advanced Python Programming </td>
                 <td><span class="status-done">COMPLETED</span></td>
                 <td><span class="status-done">COMPLETED</span></td>
-                <td><span class="status-Pending">Tuesday</span><br><small class="status-pending">10.50-12.35</small></td>
+                <td><span class="status-done">COMPLETED</span></td>
                 <td></td>
                 <td></td>
                 <td></td>
@@ -269,7 +269,7 @@
                 <td class="subject-name">Probability and Statistics</td>
                 <td><span class="status-done">COMPLETED</span></td>
                 <td><span class="status-done">COMPLETED</span></td>
-                <td><span class="status-Pending">Tuesday</span><br><small class="status-pending">10.50-11.45</small></td>
+                <td><span class="status-done">COMPLETED</span></td>
                 <td></td>
                 <td></td>
                 <td></td>
