there are no reminders for now

--- a/my_mind.html
+++ b/my_mind.html
@@ -279,7 +279,7 @@
         </tbody>
     </table>
     <br>
-    <div class="deadline-box">Prepare for CA2 Its from Monday</div>
+    <!--<div class="deadline-box">Prepare for CA2 Its from Monday</div-->
     <br>
     <br>
     <div class="work-done-section">
