--- a/index.html
+++ b/index.html
@@ -23,12 +23,10 @@
         </div>
 
         <div id="timetable" class="section hidden">
-            <h1>Timetable</h1>
-            <input type="text" id="subject" placeholder="Subject">
-            <input type="text" id="time" placeholder="Time">
-            <button onclick="addTimetable()">Add</button>
-            <ul id="timetableList"></ul>
+    <h1>Weekly Timetable</h1>
+    <div id="timetableGrid"></div>
         </div>
+
 
         <div id="exams" class="section hidden">
             <h1>Exam Tracker</h1>
