changing the theem of this project

--- a/index.html
+++ b/index.html
@@ -22,10 +22,11 @@
             <p>Welcome to your Academic Control Center</p>
         </div>
 
-        <div id="timetable" class="section hidden">
-    <h1>Weekly Timetable</h1>
+<div id="timetable" class="section hidden">
+    <h1>Weekly Planner</h1>
     <div id="timetableGrid"></div>
-        </div>
+</div>
+
 
 
         <div id="exams" class="section hidden">
